# ros2_required

./: .gitignore
git_ws/src/custom_interfaces/: CMakeLists.txt  package.xml
git_ws/src/custom_interfaces/msg/: AliveTurtle.msg  AllTurtle.msg
git_ws/src/custom_interfaces/srv/: SetLed.srv
git_ws/src/my_robot_bringup/: CMakeLists.txt  package.xml
git_ws/src/my_robot_bringup/config/: controller.yaml  gazebo_bridge.yaml  my_robot.yaml  my_robot_controller.yaml
git_ws/src/my_robot_bringup/launch/: my_robot_gazebo.launch.xml  num_app.launch.xml  robot_controller.launch.xml  turtle_proj.launch.xml
git_ws/src/my_robot_bringup/world/: robot_project.sdf
git_ws/src/my_robot_description/: CMakeLists.txt
git_ws/src/my_robot_description/launch/: display.launch.py  my_robot_display.launch.xml
git_ws/src/my_robot_description/rviz2/: arm_urdf.rviz  my_robot_urdf.rviz
git_ws/src/my_robot_description/urdf/: arm_2DOF.xacro  camera.xacro  mobile_base.xacro  mobile_base_gazebo.xacro  mobile_base_ros2_control.xacro  my_robot.urdf.xacro  properties.xacro
irc_ros_ws/src/arm_bringup/: CMakeLists.txt  package.xml
irc_ros_ws/src/arm_bringup/config/: arm_controller.yaml
irc_ros_ws/src/arm_bringup/launch/: arm.launch.py  arm.launch.xml  arm_gazebo.launch.xml  display.launch.xml  gazebo.launch.py  my_robot.launch.py
irc_ros_ws/src/arm_bringup/rviz2/: arm_urdf.rviz
irc_ros_ws/src/arm_description/: CMakeLists.txt  package.xml
irc_ros_ws/src/arm_description/meshes/: base_link.stl  forearm_1.stl  shoulder_1.stl  waist_1.stl  wrist_1_1.stl  wrist_2_1.stl
irc_ros_ws/src/arm_description/src/: arm_kinematic.cpp
irc_ros_ws/src/arm_description/urdf/: arm.gazebo  arm.ros2_control.xacro  arm.trans  arm.xacro  arm_base.xacro  arm_gazebo.ros2_control.xacro  arm_gazebo.xacro
irc_ros_ws/src/arm_hardware/: CMakeLists.txt  arm_hardware_interface.xml  package.xml
irc_ros_ws/src/arm_hardware/include/: arm_system.hpp  joint.hpp  visibility_control.h
irc_ros_ws/src/arm_hardware/src/: arm_system.cpp
irc_ros_ws/src/irc_custom_interfaces/: CMakeLists.txt  package.xml
irc_ros_ws/src/irc_custom_interfaces/msg/: ArmAngles.msg  Ps4.msg
irc_ros_ws/src/irc_interfaces/: CMakeLists.txt  package.xml
irc_ros_ws/src/irc_interfaces/msg/: Ps4.msg
irc_ros_ws/src/irc_rover_bringup/: CMakeLists.txt  package.xml
irc_ros_ws/src/irc_rover_bringup/config/: irc_rover_controller.yaml
irc_ros_ws/src/irc_rover_bringup/launch/: display.launch.py  irc_rover.launch.xml  micro_agent.launch.py
irc_ros_ws/src/irc_rover_description/: CMakeLists.txt  package.xml
irc_ros_ws/src/irc_rover_description/meshes/: arm_base_link_1.stl  forearm_1.stl  left_back_wheel_1.stl  left_front_wheel_1.stl  left_middle_wheel_1.stl  right_middle_wheel_1.stl  shoulder_1.stl  waist_1.stl  wrist_1_1.stl  wrist_2_1.stl
irc_ros_ws/src/irc_rover_description/src/: check_node.cpp
irc_ros_ws/src/irc_rover_description/urdf/: kartikeya.gazebo  kartikeya.trans  kartikeya.xacro  kartikeya_arm.ros2_control.xacro  kartikeya_chassis.ros2_control.xacro  materials.xacro
irc_ros_ws/src/ps4/: package.xml  setup.py
irc_ros_ws/src/ps4/ps4/: ps4_data.py  ps4_data_to_twist.py
irc_ros_ws/src/rover_base_bringup/: CMakeLists.txt  package.xml
irc_ros_ws/src/rover_base_bringup/config/: joystick.yaml  rover_controllers.yaml
irc_ros_ws/src/rover_base_bringup/launch/: joystick.launch.py  rover_base.launch.py
irc_ros_ws/src/rover_base_description/: CMakeLists.txt  package.xml
irc_ros_ws/src/rover_base_description/meshes/: right_back_wheel_1.stl  right_front_wheel_1.stl
irc_ros_ws/src/rover_base_description/src/: twist_to_stamped.cpp
irc_ros_ws/src/rover_base_description/urdf/: rover.materials.xacro  rover_base.ros2_control.xacro  rover_base.urdf.xacro  rover_base_description.urdf.xacro  rover_urdf_wheels.trans
irc_ros_ws/src/rover_base_hardware/: CMakeLists.txt  package.xml  rover_base_hardware_interface.xml
irc_ros_ws/src/rover_base_hardware/include/: roverbase_system.hpp  visibility_control.h  wheel.hpp
irc_ros_ws/src/rover_base_hardware/src/: rover_base_system.cpp
irc_ros_ws/src/ublox_gps/config/: c94_m8p_rover.yaml
micro_ros_esp/Micro_ros/: platformio.ini
micro_ros_esp/Micro_ros/extra_packages/: extra_packages.repos
micro_ros_esp/Micro_ros/lib/Cytron/: Cytron.cpp  (+1 more)
micro_ros_esp/Micro_ros/src/: main.cpp
micro_ros_teensy/Arm_teensy_vidhani/src/: main.cpp
micro_ros_teensy/Micro_ros_teensy/: platformio.ini
micro_ros_teensy/Micro_ros_teensy/src/: main.cpp
micro_ros_teensy/Micro_ros_teensy_Arm/src/: main.cpp
test_ws/src/armm_description/: package.xml  setup.cfg  setup.py
worlds/: arena_world.sdf
worlds/arena/: model.config  model.sdf
worlds/arena/meshes/: arena_collision.stl  arena_visual.mtl
(+17 files in other folders)
